java/java-tests/testData/inspection/explicitToImplicitClassMigration/beforeWithExtendList.java
public class beforeWithExtendList extends <error descr="Cannot resolve symbol 'Something'">Something</error> {
  public static void main(String[] args) {
    System.out.println("Hello, world!");
  }
}
